--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.2
+  google_sign_in: ^5.3.0
+  flutter_facebook_auth: ^4.3.0
 
 dev_dependencies:
   flutter_test:
